// Vitest Snapshot v1

exports[`<PageListTemplate /> > should render with pages 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen max-h-screen min-w-screen max-w-screen flex flex-col"
  >
    <div
      class="my-0 pt-10 px-5 text-xl"
    >
      <nav>
        <ul
          class="flex flex-row flex-wrap sm:flex-nowrap list-none justify-between max-w-screen-sm mx-auto"
        >
          <li
            class="mr-auto"
          >
            <a
              class="hover:underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/posts"
            >
              📰 Posts
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/pages"
            >
              📑 Pages
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="mb-auto"
    >
      <header
        class="prose text-2xl mx-auto mt-20"
      >
        <h1
          class="text-center mx-auto"
        >
          Pages
        </h1>
      </header>
      <section>
        <div
          class="mt-12 grid gap-5 max-w-content mx-auto lg:grid-cols-3 lg:max-w-screen-lg"
        >
          <a
            href="/pagessample-page"
          >
            <div
              class="flex flex-col rounded-lg shadow-lg overflow-hidden cursor-pointer border-2 h-full hover:border-indigo-500"
            >
              <div
                class="flex-shrink-0 relative h-40"
              >
                <img
                  alt="Pantheon Logo"
                  src="/pantheon.png"
                />
              </div>
              <h2
                class="my-4 mx-6 text-xl leading-7 font-semibold text-gray-900"
              >
                 →
              </h2>
            </div>
          </a>
        </div>
      </section>
    </main>
    <footer
      class="w-full text-white bg-black p-4 mt-12"
    >
      <nav
        class="flex flex-col max-w-lg mx-auto lg:max-w-screen-lg"
      >
        <ul />
      </nav>
      <div
        class="flex my-4 p-2"
      >
        <span
          class="mx-auto"
        >
          © 2022 Built with 
          <a
            class="text-white hover:text-blue-100 underline"
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            class="text-blue-500 underline hover:text-blue-100"
            href="https://wordpress.com/"
          >
            WordPress
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`<PageTemplate /> > should render a page 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen max-h-screen min-w-screen max-w-screen flex flex-col"
  >
    <div
      class="my-0 pt-10 px-5 text-xl"
    >
      <nav>
        <ul
          class="flex flex-row flex-wrap sm:flex-nowrap list-none justify-between max-w-screen-sm mx-auto"
        >
          <li
            class="mr-auto"
          >
            <a
              class="hover:underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/posts"
            >
              📰 Posts
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/pages"
            >
              📑 Pages
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="mb-auto"
    >
      <article
        class="prose lg:prose-xl mt-10 mx-auto"
      >
        <h1>
          Sample Page
        </h1>
        <p
          class="text-sm text-gray-600"
        >
          Tue Sep 13 2022
        </p>
        <a
          class="font-normal"
          href="/pages"
        >
          Pages →
        </a>
        <div
          class="mt-12 max-w-lg mx-auto lg:grid-cols-3 lg:max-w-screen-lg"
        />
        <div
          class="mt-12 max-w-lg mx-auto lg:grid-cols-3 lg:max-w-screen-lg"
        >
          <div>
            

            <p>
              This is an example page. It’s different from a blog post because it will stay in one place and will show up in your site navigation (in most themes). Most people start with an About page that introduces them to potential site visitors. It might say something like this:
            </p>
            




            <blockquote
              class="wp-block-quote"
            >
              <p>
                Hi there! I’m a bike messenger by day, aspiring actor by night, and this is my website. I live in Los Angeles, have a great dog named Jack, and I like piña coladas. (And gettin’ caught in the rain.)
              </p>
            </blockquote>
            




            <p>
              …or something like this:
            </p>
            




            <blockquote
              class="wp-block-quote"
            >
              <p>
                The XYZ Doohickey Company was founded in 1971, and has been providing quality doohickeys to the public ever since. Located in Gotham City, XYZ employs over 2,000 people and does all kinds of awesome things for the Gotham community.
              </p>
            </blockquote>
            




            <p>
              As a new WordPress user, you should go to 
              <a
                href="https://dev-cobs-decoupled-wp.pantheonsite.io/wp/wp-admin/"
              >
                your dashboard
              </a>
               to delete this page and create new pages for your content. Have fun!
            </p>
            

          </div>
        </div>
      </article>
    </main>
    <footer
      class="w-full text-white bg-black p-4 mt-12"
    >
      <nav
        class="flex flex-col max-w-lg mx-auto lg:max-w-screen-lg"
      >
        <ul />
      </nav>
      <div
        class="flex my-4 p-2"
      >
        <span
          class="mx-auto"
        >
          © 2022 Built with 
          <a
            class="text-white hover:text-blue-100 underline"
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            class="text-blue-500 underline hover:text-blue-100"
            href="https://wordpress.com/"
          >
            WordPress
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
